2006-02-09  J"orn Rennecke <joern.rennecke@st.com>

	PR inline-asm/16194
	* tree.h (decl_overlaps_hard_reg_set_p) Don't declare.
	(tree_overlaps_hard_reg_set): Declare.
	* stmt.c (decl_overlaps_hard_reg_set_p): Now static.  Change return
	type and signature to match function type expected by walk_tree.
	(tree_overlaps_hard_reg_set): New function.
	(decl_conflicts_with_clobbers_p): Rename to:
	(tree_conflicts_with_clobbers_p).  Take HARD_REG_SET * argument.
	Use tree_overlaps_hard_reg_set.  Changed caller.
	* doc/tm.texi (TARGET_MD_ASM_CLOBBERS): Replace
	decl_overlaps_hard_reg_set_p with tree_overlaps_hard_reg_set.
	* cris.c (cris_md_asm_clobbers): Likewise.

2006-02-09  Bernd Schmidt  <bernd.schmidt@analog.com>

	* reload1.c (emit_input_reload_insns): Delete code that tries to
	inherit using find_equiv_reg.

2006-02-09  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* c-common.h (flag_const_strings): Don't declare.
	* c-common.c (flag_const_strings): Remove.
	* c.opt (fconst_strings): Remove.
	* c-opts.c (c_common_handle_option): Remove <OPT_fconst_strings>.
	<OPT_Wwrite_strings>: Don't set flag_const_strings.
	(c_common_init_options): Don't set flag_const_strings.
	* doc/invoke.texi (-fno-const-strings): Remove documentation.

2006-02-09  Richard Earnshaw  <richard.earnshaw@arm.com>

	* arm.md (tlobits_cbranch): New pattern.
	* arm.h (arm_select_cc_mode): For thumb, only return CC_Nmode if
	testing a single bit.

2006-02-09  Andrew Pinski  <pinskia@physics.uc.edu>

	PR tree-opt/26179
	* tree-ssa-pre.c (create_component_ref_by_pieces):
	Handle RETURN_DECL like VAR_DECL.

2006-02-09  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/26134
	* fold-const.c (fold_indirect_ref_1): Fold 
	"*(foo *)&complexfoo" to "__real__ complexfoo"
	and "((foo*)&complexfoo)[1]" to "__imag__ complexfoo".

2006-02-09  Andrew Pinski  <pinskia@physics.uc.edu>

	* tree-flow-inline.h (var_can_have_subvars): 
	Volatile variables should not have subvariables.
